--- a/04-css/css/oblikovanje.css
+++ b/04-css/css/oblikovanje.css
@@ -1,4 +1,5 @@
 body {
+
     /*  Barva pisave pod značko oz. oznako  */
     color: #333333; 
     /*  Določanje pisave: brskalnik uporabi prvo v seznamu pisav, ki jo ima uporabnik nameščeno.
@@ -31,3 +32,28 @@ code {
     font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
     color: #009966;
 }
+h1{
+    color: #330066;
+}
+h2{
+    margin-top: 2em;
+    border-top: 1px #AAAAAA solid;
+    padding-top: 0.5em;
+}
+#uvod{
+    padding: 2em;
+    background-color: rgb(51, 0, 102, 0.1);
+}
+.slika{
+    
+        font-size: 0.9em;
+        width: 40%;
+        text-align: left;
+        float: right;
+        margin-left: 2em;
+
+ }  
+ .slika img{
+    width:100%;
+    height: auto;
+ }  
