--- a/04-css/css/oblikovanje.css
+++ b/04-css/css/oblikovanje.css
@@ -51,9 +51,20 @@ h2{
         text-align: left;
         float: right;
         margin-left: 2em;
+        
 
  }  
  .slika img{
     width:100%;
     height: auto;
+    border-radius: 50%;
  }  
+.slika p:last-child{
+    font-size: 0.8em;
+    margin-top: -0.5em;
+
+}
+a::before{
+    content:"»";
+    
+}
